# patch_mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPRECATION.md  LICENSE  README.md  SECURITY.md  SECURITY_ISSUES.md  SECURITY_REVIEW.md  WORKFLOWS.md  pyproject.toml  using_edit_or_apply_patch.md
.github/workflows/: ci.yml
.mcp_instructions/: patch_mcp.md
docs/: AI_IMPLEMENTATION_GUIDE.md  API.md  WORKFLOWS.md  apply_patch_flow.md  apply_patch_tool_use.md  project_design.md
src/patch_mcp/: __init__.py  __main__.py  models.py  recovery.py  server.py  utils.py  workflows.py
src/patch_mcp/tools/: __init__.py  apply.py  backup.py  generate.py  inspect.py  revert.py  update.py  validate.py
tests/: __init__.py  manual_test_server.py  test_api_semantics.py  test_apply.py  test_backup.py  test_generate.py  test_inspect.py  test_models.py  test_revert.py  test_security.py  test_server.py  test_update.py  test_validate.py
tests/integration/: __init__.py  test_error_scenarios.py  test_example_workflows.py  test_workflows.py
